--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <h3 class="team-title">Сергей Сергеев</h3>
               <h4 class="team-title-2">Сео | Маркетинг Гуру</h4>
               <p>
-                Хороший парень, носит дорогие очки, считает себя профессионалом.
+                Хороший парень. Носит дорогие очки. Считает себя профессионалом.
               </p>
             </div>
             <div>
@@ -89,7 +89,7 @@
               <h3 class="team-title">Максим Максимов</h3>
               <h4 class="team-title-2">Креативный директор</h4>
               <p>
-                Креативный донельзя чувак. Сфоткался для этого сайта в костюме
+                Креативный донельзя чувак. Сделал фото для этого сайта в костюме
                 свиньи. Это о многом говорит!
               </p>
             </div>
@@ -98,7 +98,7 @@
               <h3 class="team-title">Глеб Глебов</h3>
               <h4 class="team-title-2">Дизайнер</h4>
               <p>
-                Сам придумал дизайн своего поло. Рисует карандашом и широко и
+                Работал во всех топовых студиях. Теперь у нас. Рисует карандашом и широко и
                 естественно улыбается на камеру.
               </p>
             </div>
@@ -108,7 +108,7 @@
               <h4 class="team-title-2">Разработчик</h4>
               <p>
                 Наш милаш-разработчик. Делает скрипты за огромные деньги. Больше
-                ничего не умеет. Носит с Сергеем одни очки.
+                ничего не умеет. Очки очень дорогие тоже.
               </p>
             </div>
           </div>
