--- a/index.html
+++ b/index.html
@@ -77,38 +77,38 @@
           </p>
           <div class="team-container">
             <div>
-              <img src="file/ceo.jpg" alt="Сео" />
+              <img width="155" height="155" src="file/ceo.jpg" alt="Сео" />
               <h3 class="team-title">Сергей Сергеев</h3>
               <h4 class="team-title-2">Сео | Маркетинг Гуру</h4>
               <p>
-                Хороший парень. Носит дорогие очки. Считает себя профессионалом.
+                Хороший парень, носит дорогие очки, считает себя профессионалом.
               </p>
             </div>
             <div>
-              <img src="file/creative_director.jpg" alt="Креативный директор" />
+              <img width="155" height="155" src="file/creative_director.jpg" alt="Креативный директор" />
               <h3 class="team-title">Максим Максимов</h3>
               <h4 class="team-title-2">Креативный директор</h4>
               <p>
-                Креативный донельзя чувак. Сделал фото для этого сайта в костюме
+                Креативный донельзя чувак. Сфоткался для этого сайта в костюме
                 свиньи. Это о многом говорит!
               </p>
             </div>
             <div>
-              <img src="file/designer.jpg" alt="Дизайнер" />
+              <img width="155" height="155" src="file/designer.jpg" alt="Дизайнер" />
               <h3 class="team-title">Глеб Глебов</h3>
               <h4 class="team-title-2">Дизайнер</h4>
               <p>
-                Работал во всех топовых студиях. Теперь у нас. Рисует карандашом и широко и
+                Сам придумал дизайн своего поло. Рисует карандашом и широко и
                 естественно улыбается на камеру.
               </p>
             </div>
             <div>
-              <img src="file/backend.jpg" alt="Разработчик" />
+              <img width="155" height="155" src="file/backend.jpg" alt="Разработчик" />
               <h3 class="team-title">Олег Олегов</h3>
               <h4 class="team-title-2">Разработчик</h4>
               <p>
                 Наш милаш-разработчик. Делает скрипты за огромные деньги. Больше
-                ничего не умеет. Очки очень дорогие тоже.
+                ничего не умеет. Носит с Сергеем одни очки.
               </p>
             </div>
           </div>
@@ -147,24 +147,67 @@
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title-main">НАШЕ ПОРТФОЛИО</h2>
-          <img src="file/poloska5.jpg" alt="Полосочка 5" class="poloska5">
-          <p class="portfolio-p">Это наши самые крутые работы. В доказательство, что это делали именно мы - картинки этих работ и честное слово.</p>
+          <img src="file/poloska5.jpg" alt="Полосочка 5" class="poloska5" />
+          <p class="portfolio-p">
+            Это наши самые крутые работы. В доказательство, что это делали именно
+            мы - картинки этих работ и честное слово.
+          </p>
+          <nav class="works-menu">
+            <a href="#" class="works-menu-point selected-work-point">ALL</a>
+            <a href="#" class="works-menu-point">WEB</a>
+            <a href="#" class="works-menu-point">APPS</a>
+            <a href="#" class="works-menu-point">ICONS</a>
+          </nav>
           <div class="works-container">
             <div class="work">
-              <img src="file/work1.jpg" alt="Работа №1" class="work-img">
+              <img src="file/work1.jpg" alt="Работа №1" class="work-img" />
               <p>Описание этого сайта. Он крутой.</p>
             </div>
             <div class="work">
-              <img src="file/work2.jpg" alt="Работа №3" class="work-img">
+              <img src="file/work2.jpg" alt="Работа №3" class="work-img" />
               <p>Описание этого сайта. Он крутой.</p>
             </div>
             <div class="work">
-              <img src="file/work3.jpg" alt="Работа №3" class="work-img">
+              <img src="file/work3.jpg" alt="Работа №3" class="work-img" />
               <p>Описание этого сайта. Он крутой.</p>
             </div>
             <div class="work">
-              <img src="file/work4.jpg" alt="Работа №4" class="work-img">
+              <img src="file/work4.jpg" alt="Работа №4" class="work-img" />
               <p>Описание этого сайта. Он крутой.</p>
+            </div>
+          </div>
+          <a href="#" class="works-button">Показать больше проектов</a>
+        </div>
+      </section>
+      <section class="comments">
+        <div class="container">
+          <h2 class="comments-title-main">ЧТО ЛЮДИ ГОВОРЯТ О НАС?</h2>
+          <img src="file/poloska6.jpg" alt="Полосочка 6" class="poloska6">
+          <p class="comments-p">Люди любят нас!</p>
+          <div class="comments-container">
+            <div class="comment">
+              <img src="file/puten.jpg" alt="Комментатор" width="100" height="100">
+              <p>"Хорошие ребята! Гордость берёт за земляков! Их креативный мне аквадискатеку делал, Дима визжал!"</p>
+              <h3>Путен</h3>
+              <h4>Президент России</h4>
+            </div>
+            <div class="comment">
+              <img src="file/geyts.jpg" alt="Комментатор" width="100" height="100">
+              <p>"Я в шоке от того, что умеют эти красавчики! Мой Майкрософт - просто детский лепет."</p>
+              <h3>Билл Гейтс</h3>
+              <h4>Генеральный Microsoft</h4>
+            </div>
+            <div class="comment">
+              <img src="file/bascov.jpg" alt="Комментатор" width="100" height="100">
+              <p>"Мой сайт видали? Это работа этой веб студии... Так то)."</p>
+              <h3>Николай Басков</h3>
+              <h4>Золотой голос России</h4>
+            </div>
+            <div class="comment">
+              <img src="file/chel.jpg" alt="Комментатор" width="100" height="100">
+              <p>"Ой, что это. Не пойму, что от меня надо, но 5 звёзд - по-любому"</p>
+              <h3>Какой-то парень</h3>
+              <h4>Прохожий</h4>
             </div>
           </div>
         </div>
