--- a/index.html
+++ b/index.html
@@ -226,19 +226,17 @@
           <form action="#" method="post" class="contacts-form">
             <input
               type="text"
-              value="Ваше имя"
+              placeholder="Ваше имя"
               name="firstname"
               class="name-input"
             />
             <input
               type="text"
-              value="Ваш Email"
+              placeholder="Ваш Email"
               name="email"
               class="email-input"
             />
-            <textarea rows="4" class="contacts-message">
-Ваше сообщение Нам</textarea
-            >
+            <textarea rows="4" placeholder="Ваше сообщение нам" class="contacts-message"></textarea>
             <button class="contacts-send-button">ОТПРАВИТЬ СООБЩЕНИЕ</button>
           </form>
         </div>
